[tool.poetry]
name = "fractus"
version = "0.1.0"
description = ""
authors = ["aFy4a <afy4a@vk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dearpygui = "^1.10.1"

[tool.poetry.scripts]
draw = "fractus.entry:help"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

